--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,38 @@
+/* Body Style */
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
 }
+.body-bg {
+  background-color: rgb(243, 236, 227);
+}
+.margin-left {
+  margin-left: -10%;
+}
+
+/* Web Title Style*/
+#title {
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 5px;
+  position: absolute;
+  color: rgb(224, 184, 5);
+}
+#title:hover {
+  color: rgb(8, 8, 8);
+}
+#title2 {
+  text-transform: uppercase;
+  font-weight: 800;
+  letter-spacing: 5px;
+  position: absolute;
+  color: rgb(8, 8, 8);
+}
+#title2:hover {
+  color: rgb(224, 184, 5);
+}
+
+/* Search Field Style */
 .search-field {
   border: none;
   border-radius: 50px;
@@ -25,41 +56,55 @@ body {
   border-radius: 25px;
   margin-left: 20px;
 }
+
+/* Products View Styles */
 #all-products {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  /* border: 1px solid black; */
+  border: 1px solid rgba(0, 0, 0, 0.027);
   text-align: center;
   width: 100%;
   margin: auto;
+  padding: 10px;
   align-items: center;
   justify-content: center;
+  background-color: rgba(240, 229, 217, 0.795);
 }
 .single-product {
   padding: 10px;
   transition: 0.6s;
+  height: 450px;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
   border-radius: 10px;
-  border: 1px solid cyan;
+  border: 2px solid rgb(108, 132, 139);
+  background-color: rgb(195, 202, 202);
 }
 .product-image {
   width: 150px;
   height: 150px;
+  border-style: solid;
+  border-width: 0.1px;
+  border-color: rgba(141, 141, 143, 0.801);
+  border-radius: 5px;
 }
+
+/* Cart Style */
 .cart {
   width: 350px;
-  /* border: 1px solid green; */
   padding: 10px;
   box-shadow: 10px 10px 20px gray;
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  background-color: rgb(226, 216, 206);
 }
 .cart-main {
   padding-right: 30px;
 }
+
+/* Media Query */
 @media only screen and (max-width: 768px) {
   #all-products {
     display: grid;
@@ -67,7 +112,6 @@ body {
   }
   .cart {
     width: 300px;
-    /* border: 1px solid green; */
     padding: 10px;
     box-shadow: 10px 10px 20px gray;
     border-radius: 5px;
@@ -82,5 +126,10 @@ body {
   #all-products {
     display: grid;
     grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media only screen and (max-width: 576px) {
+  .margin-left {
+    margin-left: -25%;
   }
 }
